@@ -352,6 +352,7 @@ sub initialize() {
 		DELETE_THEN_ADD => undef,
 		MULTICAST => undef,
 		DONT_LOAD => '',
+		BROKEN_ROUTING => '',
 		#
 		# Packet Disposition
 		#
@@ -1878,6 +1879,7 @@ sub get_configuration( $ ) {
     default_yes_no 'EXPAND_POLICIES'            , '';
     default_yes_no 'KEEP_RT_TABLES'             , '';
     default_yes_no 'DELETE_THEN_ADD'            , 'Yes';
+    default_yes_no 'BROKEN_ROUTING'             , '';
     default_yes_no 'MULTICAST'                  , '';
     default_yes_no 'MARK_IN_FORWARD_CHAIN'      , '';
     
