@@ -15,6 +15,8 @@ Changes in 4.1.5
 7)  Generate an error when mac match is used in the POSTROUTING or
     OUTPUT chains.
 
+8)  Add 'BROKEN_ROUTING' option.
+
 Changes in 4.1.4
 
 1)  Fix do_test() to accept 0 and to use the same mask as
